[gd_scene load_steps=7 format=3 uid="uid://dx4ttlvalnyng"]

[ext_resource type="Script" path="res://scripts/Pod.gd" id="1_htjyx"]
[ext_resource type="Texture2D" uid="uid://cbj0h085v8t1b" path="res://textures/Lander.png" id="2_wu0lr"]
[ext_resource type="Curve" uid="uid://cvt3vrgcu13a1" path="res://scenes/GroundEffectCurve.tres" id="2_yua1n"]
[ext_resource type="Script" path="res://scenes/Thruster.gd" id="4_u305d"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bkdgs"]
friction = 0.43
bounce = 0.17

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50ax2"]
radius = 7.0

[node name="Pod" type="RigidBody2D"]
mass = 4.0
physics_material_override = SubResource("PhysicsMaterial_bkdgs")
continuous_cd = 2
max_contacts_reported = 4
contact_monitor = true
angular_damp = 0.75
script = ExtResource("1_htjyx")
RotationThrustPower = 3072.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_wu0lr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_50ax2")

[node name="MainThruster" type="Node2D" parent="."]
position = Vector2(0, 6)
rotation = 1.5708
script = ExtResource("4_u305d")
GroundEffectMultiplier = 2.0
EffectCurve = ExtResource("2_yua1n")

[node name="DownThruster" type="Node2D" parent="."]
position = Vector2(0, -6)
rotation = -1.5708
script = ExtResource("4_u305d")
ThrustPower = 512.0
GroundEffectMultiplier = 2.0
EffectCurve = ExtResource("2_yua1n")

[node name="RightThruster" type="Node2D" parent="."]
position = Vector2(-14, 0)
rotation = 3.14159
script = ExtResource("4_u305d")
ThrustPower = 512.0
GroundEffectMultiplier = 2.0
EffectCurve = ExtResource("2_yua1n")

[node name="LeftThruster" type="Node2D" parent="."]
position = Vector2(14, 0)
script = ExtResource("4_u305d")
ThrustPower = 512.0
GroundEffectMultiplier = 2.0
EffectCurve = ExtResource("2_yua1n")
